2016-06-14         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawkapi.c (node_to_awk_value): When caller requests AWK_SCALAR
	or AWK_UNDEFINED, we need to call fixtype before we check the type.

2016-06-13         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* awkgram.y: Eliminate STRCUR tests. Must use STRING to test whether
	a scalar is a string.

2016-06-12         Andrew J. Schorr     <aschorr@telemetry-investments.com>
	
	* awk.h: Improve comment about STRING and NUMBER type assignment.
	(nondec2awknum): Add endptr argument.
	(fixtype): New inline function to clarify a scalar's type.
	* array.c (sort_up_value_type): Call fixtype before checking the value
	types.
	* awkgram.y (yylex): Pass NULL endptr argument to nondec2awknum.
	(valinfo): Remove dead tests: either STRING or NUMBER or both
	must be set, so there's no reason to continue with checks for NUMCUR or
	STRCUR.
	* builtin.c (do_exp, do_int, do_log, do_sqrt, do_sin, do_cos, do_srand):
	Fix lint check for non-numeric argument.
	(do_string): Fix lint check for 1st and 2nd args being strings.
	(do_length): Fix assert to allow for Node_typedregex.
	Fix lint check for non-string argument.
	(format_tree): Fix type detection for '%c' arguments.
	(do_strftime): Fix lint check for non-numeric 2nd argument and
	lint check for non-string 1st argument.
	(do_mktime): Fix lint check for non-string argument. Eliminate useless
	logic to save and restore terminating NUL.
	(do_system, do_tolower, do_toupper): Fix lint check for non-string
	argument.
	(do_atan2, do_lshift, do_rshift, do_and, do_or, do_xor, do_compl,
	do_intdiv): Fix lint checks for non-numeric args.
	(do_sub): Attempt to clean up treatment of 3rd argument to gensub
	despite vague documentation of expected behavior.
	(do_strnum): Fix bug in number detection logic, and pass new endptr
	arg to nondec2awknum.
	(nondec2awknum): Add endptr argument so caller can detect how much